--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" dir="ltr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,29 +10,29 @@
 </head>
 <body>
     <div class="container">
-        <h1 id="bingo-title" class="title" contenteditable="true" role="textbox" aria-label="Bingo card title">NAME's Orakel Für 2026</h1>
+        <h1 id="bingo-title" class="title" contenteditable="true" role="textbox" aria-label="Bingo card title" dir="ltr">NAME's Orakel Für 2026</h1>
 
         <div class="bingo-container">
             <div class="bingo-grid" role="grid" aria-label="4x4 Bingo Grid">
-                <div class="bingo-cell" contenteditable="true" role="gridcell" aria-label="Bingo cell 1 of 16"></div>
-                <div class="bingo-cell" contenteditable="true" role="gridcell" aria-label="Bingo cell 2 of 16"></div>
-                <div class="bingo-cell" contenteditable="true" role="gridcell" aria-label="Bingo cell 3 of 16"></div>
-                <div class="bingo-cell" contenteditable="true" role="gridcell" aria-label="Bingo cell 4 of 16"></div>
+                <div class="bingo-cell" contenteditable="true" role="gridcell" aria-label="Bingo cell 1 of 16" dir="ltr"></div>
+                <div class="bingo-cell" contenteditable="true" role="gridcell" aria-label="Bingo cell 2 of 16" dir="ltr"></div>
+                <div class="bingo-cell" contenteditable="true" role="gridcell" aria-label="Bingo cell 3 of 16" dir="ltr"></div>
+                <div class="bingo-cell" contenteditable="true" role="gridcell" aria-label="Bingo cell 4 of 16" dir="ltr"></div>
 
-                <div class="bingo-cell" contenteditable="true" role="gridcell" aria-label="Bingo cell 5 of 16"></div>
-                <div class="bingo-cell" contenteditable="true" role="gridcell" aria-label="Bingo cell 6 of 16"></div>
-                <div class="bingo-cell" contenteditable="true" role="gridcell" aria-label="Bingo cell 7 of 16"></div>
-                <div class="bingo-cell" contenteditable="true" role="gridcell" aria-label="Bingo cell 8 of 16"></div>
+                <div class="bingo-cell" contenteditable="true" role="gridcell" aria-label="Bingo cell 5 of 16" dir="ltr"></div>
+                <div class="bingo-cell" contenteditable="true" role="gridcell" aria-label="Bingo cell 6 of 16" dir="ltr"></div>
+                <div class="bingo-cell" contenteditable="true" role="gridcell" aria-label="Bingo cell 7 of 16" dir="ltr"></div>
+                <div class="bingo-cell" contenteditable="true" role="gridcell" aria-label="Bingo cell 8 of 16" dir="ltr"></div>
 
-                <div class="bingo-cell" contenteditable="true" role="gridcell" aria-label="Bingo cell 9 of 16"></div>
-                <div class="bingo-cell" contenteditable="true" role="gridcell" aria-label="Bingo cell 10 of 16"></div>
-                <div class="bingo-cell" contenteditable="true" role="gridcell" aria-label="Bingo cell 11 of 16"></div>
-                <div class="bingo-cell" contenteditable="true" role="gridcell" aria-label="Bingo cell 12 of 16"></div>
+                <div class="bingo-cell" contenteditable="true" role="gridcell" aria-label="Bingo cell 9 of 16" dir="ltr"></div>
+                <div class="bingo-cell" contenteditable="true" role="gridcell" aria-label="Bingo cell 10 of 16" dir="ltr"></div>
+                <div class="bingo-cell" contenteditable="true" role="gridcell" aria-label="Bingo cell 11 of 16" dir="ltr"></div>
+                <div class="bingo-cell" contenteditable="true" role="gridcell" aria-label="Bingo cell 12 of 16" dir="ltr"></div>
 
-                <div class="bingo-cell" contenteditable="true" role="gridcell" aria-label="Bingo cell 13 of 16"></div>
-                <div class="bingo-cell" contenteditable="true" role="gridcell" aria-label="Bingo cell 14 of 16"></div>
-                <div class="bingo-cell" contenteditable="true" role="gridcell" aria-label="Bingo cell 15 of 16"></div>
-                <div class="bingo-cell" contenteditable="true" role="gridcell" aria-label="Bingo cell 16 of 16"></div>
+                <div class="bingo-cell" contenteditable="true" role="gridcell" aria-label="Bingo cell 13 of 16" dir="ltr"></div>
+                <div class="bingo-cell" contenteditable="true" role="gridcell" aria-label="Bingo cell 14 of 16" dir="ltr"></div>
+                <div class="bingo-cell" contenteditable="true" role="gridcell" aria-label="Bingo cell 15 of 16" dir="ltr"></div>
+                <div class="bingo-cell" contenteditable="true" role="gridcell" aria-label="Bingo cell 16 of 16" dir="ltr"></div>
             </div>
         </div>
 
