--- a/index.html
+++ b/index.html
@@ -37,6 +37,14 @@
         </div>
 
         <div class="controls">
+            <div class="grid-size-selector">
+                <button id="grid-3x3-btn" class="grid-size-btn" aria-label="Switch to 3x3 grid">
+                    3x3
+                </button>
+                <button id="grid-4x4-btn" class="grid-size-btn active" aria-label="Switch to 4x4 grid">
+                    4x4
+                </button>
+            </div>
             <button id="download-btn" aria-label="Download bingo card as PNG image">
                 📥 Download Image
             </button>
