--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
 </head>
 <body>
     <div class="container">
+        <div class="language-selector">
+            <button id="lang-en" class="lang-btn" data-lang="en" aria-label="Switch to English">EN</button>
+            <button id="lang-de" class="lang-btn active" data-lang="de" aria-label="Switch to German">DE</button>
+            <button id="lang-it" class="lang-btn" data-lang="it" aria-label="Switch to Italian">IT</button>
+        </div>
+
         <h1 id="bingo-title" class="title" contenteditable="true" role="textbox" aria-label="Bingo card title" dir="ltr">NAME's Orakel Für 2026</h1>
 
         <div class="bingo-container">
@@ -46,10 +52,10 @@
                 </button>
             </div>
             <button id="download-btn" aria-label="Download bingo card as PNG image">
-                📥 Download Image
+                📥 <span data-i18n="downloadBtn">Download Image</span>
             </button>
             <button id="delete-all-btn" aria-label="Delete all bingo cell contents and title">
-                🗑️ Delete All
+                🗑️ <span data-i18n="deleteBtn">Delete All</span>
             </button>
         </div>
     </div>
